--- a/README.org
+++ b/README.org
@@ -7,6 +7,7 @@ Hello I'm a young programmer from India.
 My projects:
 
 - [[https://github.com/px86/linereader][linereader]] : provides line editing and history capabilities to interactive programs
+- [[https://github.com/px86/hush][hush]] : a UNIX shell supporting job sequencing, background job, IO re-directions and piping
 - [[https://github.com/px86/nights-watch][nights-watch]] : watches files for modification and re-executes the given command every-time it happens
 - [[https://github.com/px86/png-steganography-tool][png-steganography-tool]] : hide information inside PNG images
 - [[https://github.com/px86/pxurl][pxurl]] : a URL shortening webapp
