--- a/README.org
+++ b/README.org
@@ -1,18 +1,18 @@
-#+TITLE: Pushkar Raj
+#+TITLE: Hello, I'm Pushkar Raj
 #+AUTHOR: Pushkar Raj
 #+AUTHOR: px86@protonmail.com
 
-Hello I'm a young programmer from India.
+I'm a young programmer from Delhi, India.
 
-My projects:
+Some of my projects:
 
-- [[https://github.com/px86/linereader][linereader]] : provides line editing and history capabilities to interactive programs
-- [[https://github.com/px86/hush][hush]] : a UNIX shell supporting job sequencing, background job, IO re-directions and piping
-- [[https://github.com/px86/nights-watch][nights-watch]] : watches files for modification and re-executes the given command every-time it happens
-- [[https://github.com/px86/png-steganography-tool][png-steganography-tool]] : hide information inside PNG images
-- [[https://github.com/px86/pxurl][pxurl]] : a URL shortening webapp
+- [[https://github.com/px86/linereader][linereader]] : C++ library providing line editing and history capabilities to interactive CLI programs
+- [[https://github.com/px86/hush][hush]] : a UNIX shell supporting IO re-directions, piping, background execution etc.
+- [[https://github.com/px86/nights-watch][nights-watch]] : watches file(s) for modifications and re-executes a given command
+- [[https://github.com/px86/png-steganography-tool][png-steganography-tool]] : hides information inside PNG images
+- [[https://github.com/px86/pxurl][pxurl]] : a URL shortening webapp built using Nodejs, Express and MongoDB Atlas
 - [[https://github.com/px86/codebin][codebin]] : a hastebin clone for sharing code snippets (with syntax highlighting)
 - [[https://github.com/px86/fisherman][fisherman]], [[https://github.com/px86/fisherman-backend][fisherman-backend]] : a phishing tool (CLI script + backend code)
-- [[https://github.com/px86/album-splitter][album-splitter]] : split an album into multiple tracks
-- [[https://github.com/px86/css-minifier][css-minifier]] : minify CSS
-- [[https://github.com/px86/dff][dff]] : duplicate files finder in C++
+- [[https://github.com/px86/album-splitter][album-splitter]] : splits an album(audio file) into multiple tracks
+- [[https://github.com/px86/css-minifier][css-minifier]] : minifies CSS for deployment
+- [[https://github.com/px86/dff][dff]] : recursively finds and lists duplicate files
