--- a/README.org
+++ b/README.org
@@ -1,13 +1,14 @@
 #+TITLE: Hello, I'm Pushkar Raj
 #+AUTHOR: Pushkar Raj
-#+AUTHOR: px86@protonmail.com
+#+EMAIL: px86@protonmail.com
 
-I'm a young programmer from Delhi, India.
+I'm a young programmer based in Bengaluru, India.
 
 Some of my projects:
 
 - [[https://github.com/px86/linereader][linereader]] : C++ library providing line editing and history capabilities to interactive CLI programs
 - [[https://github.com/px86/hush][hush]] : a UNIX shell supporting IO re-directions, piping, background execution etc.
+- [[https://github.com/px86/dff][dff]] : recursively finds and lists duplicate files
 - [[https://github.com/px86/nights-watch][nights-watch]] : watches file(s) for modifications and re-executes a given command
 - [[https://github.com/px86/png-steganography-tool][png-steganography-tool]] : hides information inside PNG images
 - [[https://github.com/px86/pxurl][pxurl]] : a URL shortening webapp built using Nodejs, Express and MongoDB Atlas
@@ -15,4 +16,3 @@ Some of my projects:
 - [[https://github.com/px86/fisherman][fisherman]], [[https://github.com/px86/fisherman-backend][fisherman-backend]] : a phishing tool (CLI script + backend code)
 - [[https://github.com/px86/album-splitter][album-splitter]] : splits an album(audio file) into multiple tracks
 - [[https://github.com/px86/css-minifier][css-minifier]] : minifies CSS for deployment
-- [[https://github.com/px86/dff][dff]] : recursively finds and lists duplicate files
