--- a/README.org
+++ b/README.org
@@ -12,6 +12,7 @@ Some of my projects:
 - [[https://github.com/px86/nights-watch][nights-watch]] : watches file(s) for modifications and re-executes a given command
 - [[https://github.com/px86/png-steganography-tool][png-steganography-tool]] : hides information inside PNG images
 - [[https://github.com/px86/pxurl][pxurl]] : a URL shortening webapp built using Nodejs, Express and MongoDB Atlas
+- [[https://github.com/px86/clurl][clurl]] : same as [[https://github.com/px86/pxurl][pxurl]], but written in Common Lisp, and uses PostgreSQL database
 - [[https://github.com/px86/codebin][codebin]] : a hastebin clone for sharing code snippets (with syntax highlighting)
 - [[https://github.com/px86/fisherman][fisherman]], [[https://github.com/px86/fisherman-backend][fisherman-backend]] : a phishing tool (CLI script + backend code)
 - [[https://github.com/px86/album-splitter][album-splitter]] : splits an album(audio file) into multiple tracks
