--- a/README.org
+++ b/README.org
@@ -1,22 +1,1 @@
-#+TITLE: Hello, I'm Pushkar Raj
-#+AUTHOR: Pushkar Raj
-#+EMAIL: px86@protonmail.com
-
-I'm a young programmer from India.
-
-Some of my projects:
-
-- [[https://github.com/px86/dfc][dfc]] : A command line tool written in *golang*, that finds duplicate files in a given directory tree, and interactively asks the user which file they want to keep.
-- [[https://github.com/px86/gsync][gsync]] : A python tool for syncing files between google drive and local file system.
-- [[https://github.com/px86/linereader][linereader]] : C++ library providing line editing and history capabilities to interactive CLI programs
-- [[https://github.com/px86/hush][hush]] : a UNIX shell supporting IO re-directions, piping, background execution etc.
-- [[https://github.com/px86/dff][dff]] : recursively finds and lists duplicate files, written in C++
-- [[https://github.com/px86/nights-watch][nights-watch]] : watches file(s) for modifications and re-executes a given command
-- [[https://github.com/px86/png-steganography-tool][png-steganography-tool]] : hides information inside PNG images
-- [[https://github.com/px86/pxurl][pxurl]] : a URL shortening webapp built using Nodejs, Express and MongoDB Atlas
-- [[https://github.com/px86/clurl][clurl]] : same as [[https://github.com/px86/pxurl][pxurl]], but written in Common Lisp, and uses PostgreSQL database
-- [[https://github.com/px86/codebin][codebin]] : a hastebin clone for sharing code snippets (with syntax highlighting)
-- [[https://github.com/px86/fisherman][fisherman]], [[https://github.com/px86/fisherman-backend][fisherman-backend]] : a phishing tool (CLI script + backend code)
-- [[https://github.com/px86/album-splitter][album-splitter]] : splits an album(audio file) into multiple tracks
-- [[https://github.com/px86/css-minifier][css-minifier]] : minifies CSS for deployment
-- [[https://github.com/px86/bmee][bmee]] : Basic mathematical expressions evaluator
+Hi, I am Pushkar Raj (पुष्कर राज).
